# django-bitza

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  db_example.cnf  deploy.sh  docker-compose-infra.yml  docker-compose.yml  entrypoint.sh  env.example  init.sql  local-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.old  deploy.yml
Caddy/: Caddyfile
api/: api_urls.py  serializers.py  views.py
api/expenses/: api_urls.py  grpc_client.py  serializers.py  views.py
api/rent/: api_urls.py  contract_print_serializers.py  contract_services.py  generate_contract_pdf.py  rent_settings.py  serializers.py  views.py
api/tests/: test_contract_print.py
bitza/: admin.py  asgi.py  backends.py  common_functions.py  debug_requests.py  deploy.py  settings.py  urls.py  views.py  wsgi.py
bitza/additional/: views_mysql.sql  views_postgres.sql
electricity/: admin.py  models.py  repository.py  services.py  urls.py  views.py
electricity/api/: serializers.py  urls.py  views.py
electricity/migrations/: 0001_initial.py  0002_alter_meterreading_kwt_count.py  0003_alter_meterreading_unique_together.py
rent/: admin.py  forms.py  mobile_services.py  mobile_views.py  models.py  repository.py  urls.py  views.py
rent/controllers/: ContactView.py  ContractView.py  PaymentView.py  save_payment.py
rent/migrations/: 0001_initial.py  0002_room_building.py  0002_room_has_watt_counter.py  (+11 more)
requirements/: postgresql.txt
templates/: main.html  mobile_main.html
work/: admin.py  forms.py  models.py  services.py  urls.py  views.py
(+35 files in other folders)
